# dbworks

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20260220000001_create_app_schema.sql  20260220000002_seed_data.sql  20260220000003_create_sample_tables.sql  20260220000004_allow_user_level_connections.sql  20260222000001_add_db_type_to_connections.sql  20260223000001_add_organization_members.sql
backend/src/: dto.rs  main.rs
backend/src/domain/: connection.rs  data.rs  group.rs  mod.rs  organization.rs  organization_member.rs  permission.rs  user.rs
backend/src/domain/repository/: connection.rs  group.rs  mod.rs  organization.rs  organization_member.rs  permission.rs  user.rs
backend/src/infrastructure/: crypto.rs  mod.rs
backend/src/infrastructure/auth/: jwt.rs  mod.rs  oauth.rs
backend/src/infrastructure/database/: connection_repo.rs  group_repo.rs  mod.rs  organization_member_repo.rs  permission_repo.rs  (+2 more)
backend/src/presentation/: middleware.rs  mod.rs  request.rs  routes.rs  state.rs
backend/src/usecase/: connection.rs  data.rs  error.rs  group.rs  mod.rs  organization.rs  permission.rs  user.rs
backend/tests/: connection_repo_test.rs  group_repo_test.rs  infrastructure_tests.rs  organization_repo_test.rs  permission_repo_test.rs  presentation_tests.rs  usecase_tests.rs  user_repo_test.rs
backend/tests/common/: mod.rs
backend/tests/infrastructure/: mod.rs
backend/tests/presentation/: connection_handler_test.rs  data_handler_test.rs  group_handler_test.rs  helpers.rs  mod.rs  organization_handler_test.rs  permission_handler_test.rs  user_handler_test.rs
backend/tests/usecase/: connection_test.rs  data_test.rs  group_test.rs  mod.rs  organization_test.rs  permission_test.rs  user_test.rs
(+111 files in other folders)
