[package]
name = "dbworks-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "json", "uuid", "chrono", "migrate"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.10"
dotenvy = "0.15"
oauth2 = "4"
jsonwebtoken = "9"
reqwest = { version = "0.13", features = ["json"] }

[dev-dependencies]
serial_test = "3.3.1"
tower = { version = "0.5", features = ["util"] }
http = "1"
http-body-util = "0.1"
